test/lib/envoy-http-config.yaml
listeners:
  # ingress
  - address: tcp://BIND_HOST:INGRESS_PORT
    filters:
      - name: http_connection_manager
        config:
          codec_type: http1
          stat_prefix: http.test.ingress
          route_config:
            virtual_hosts:
            - name: local_test_server
              domains: ["*"]
              routes:
              - prefix: /
                cluster: local_test_server
            request_headers_to_add:
            - key: x-tubi-envoy-egress-port
              value: "EGRESS_PORT"
            - key: x-tubi-envoy-egress-addr
              value: BIND_HOST
          filters:
            - name: router
              config:
                dynamic_stats: true
          tracing:
            operation_name: ingress
          access_log:
          - path: /tmp/envoy-test-SERVICE_PORT.ingress.log
            filter:
              type: not_healthcheck

  - address: tcp://BIND_HOST:EGRESS_PORT
    filters:
      - name: http_connection_manager
        config:
          codec_type: http1
          stat_prefix: http.test.egress
          route_config:
            virtual_hosts:
              - name: remote_test_server
                domains:
                - DOMAIN_NAME:INGRESS_PORT
                routes:
                - prefix: /
                  # it looks like envoy cannot set it by header
                  timeout_ms: 100
                  retry_policy:
                    retry_on: retriable-4xx
                    num_retries: 1
                  cluster: remote_test_server
          filters:
          - name: router
            config:
              dynamic_stats: true
          tracing:
            operation_name: egress
          access_log:
          - path: /tmp/envoy-test-SERVICE_PORT.egress.log
            filter:
              type: not_healthcheck


# Administration interface
admin:
  access_log_path: /dev/null
  address: tcp://0.0.0.0:ADMIN_PORT


# Cluster manager
cluster_manager:
  clusters:
  - name: local_test_server
    type: static
    connect_timeout_ms: 1000
    lb_type: round_robin
    hosts:
    - url: tcp://BIND_HOST:SERVICE_PORT

  - name: remote_test_server
    type: static
    connect_timeout_ms: 1000
    lb_type: round_robin
    hosts:
    - url: tcp://BIND_HOST:INGRESS_PORT # route the traffic back

  # zipkin
  - name: zipkin
    connect_timeout_ms: 1000
    type: static
    lb_type: round_robin
    hosts:
      - url: tcp://BIND_HOST:ZIPKIN_PORT

tracing:
  http:
    driver:
      type: zipkin
      config:
        collector_cluster: zipkin
